Remediate linting script omission
^That's my way of saying I forgot a period.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "lint": "eslint . && ec",
+    "lint": "eslint . && ec .",
     "start": "node build/index.js",
     "test": "jest"
   },
