--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test": "test"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "npm run clean && tsc",
+    "clean": "rimraf build",
+    "format": "eslint --fix .",
     "lint": "eslint . && ec .",
     "start": "node build/index.js",
     "test": "jest"
@@ -34,6 +36,7 @@
     "editorconfig-checker": "^3.3.0",
     "eslint": "^7.20.0",
     "jest": "^26.6.3",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   }
