--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "scripts": {
     "build": "npm run clean && tsc",
+    "build:start": "npm run build && npm run start",
     "clean": "rimraf build",
     "format": "eslint --fix .",
     "lint": "eslint . && ec .",
     "start": "node build/index.js",
+    "start:watch": "nodemon",
     "test": "jest"
   },
   "devDependencies": {
@@ -36,6 +38,7 @@
     "editorconfig-checker": "^3.3.0",
     "eslint": "^7.20.0",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
