--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "build": "npm run clean && tsc",
     "build:start": "npm run build && npm run start",
     "clean": "rimraf build",
-    "format": "eslint --fix .",
     "lint": "eslint . && ec .",
+    "format": "eslint --fix . && sort-package-json",
     "start": "node build/index.js",
     "start:watch": "nodemon",
     "test": "jest"
@@ -40,6 +40,7 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
+    "sort-package-json": "^1.49.0",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   }
