--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build:start": "npm run build && npm run start",
     "clean": "rimraf build",
     "lint": "eslint . && ec .",
-    "format": "eslint --fix . && sort-package-json",
+    "format": "sort-package-json && prettier --write '**/*.ts' && eslint --fix .",
     "start": "node build/index.js",
     "start:watch": "nodemon",
     "test": "jest"
@@ -34,9 +34,10 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "editorconfig-checker": "^3.3.0",
-    "eslint": "^7.20.0",
+    "eslint": "^7.27.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
     "sort-package-json": "^1.49.0",
     "ts-jest": "^26.5.1",
