--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,41 +22,17 @@ jobs:
             ${{ runner.os }}-node-
       - name: Install dependencies
         run: npm ci
-        env:
-          CI: true
       - name: Build
         run: npm run build
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14.x
-      - name: Load dependancy cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-      - name: Install dependencies
-        run: npm ci
-        env:
-          CI: true
-      - name: Lint
-        run: npm run lint
-
   test:
+    needs: build
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest] # macos-latest is prohibitively expensive, use sparingly
-        node: [14.x, 12.x]
+        node: [16.x, 14.x, 12.x]
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -78,7 +54,27 @@ jobs:
           ${{ runner.os }}-node-
     - name: Install dependencies
       run: npm ci
-      env:
-        CI: true
     - name: Run Tests
       run: npm run test
+
+  lint:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+      - name: Load dependancy cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Install dependencies
+        run: npm ci
+      - name: Lint
+        run: npm run lint
