--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "start": "node build/index.js",
     "start:watch": "nodemon",
     "test": "jest",
+    "test:watch": "jest --watchAll",
     "release:patch": "npm version patch && git push --follow-tags",
     "release:minor": "npm version minor && git push --follow-tags",
     "release:major": "npm version major && git push --follow-tags"
