--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "build:start": "npm run build && npm run start",
     "clean": "rimraf build",
     "lint": "eslint . && ec .",
-    "format": "sort-package-json && prettier --write '**/*.ts' && eslint --fix .",
+    "format": "sort-package-json && prettier --write '**/*.{ts,js,json,yml,md}' && eslint --fix .",
     "start": "node build/index.js",
     "start:watch": "nodemon",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "release:patch": "npm version patch && git push --follow-tags",
     "release:minor": "npm version minor && git push --follow-tags",
-    "release:major": "npm version major && git push --follow-tags"
+    "release:major": "npm version major && git push --follow-tags",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@jessety/eslint-config": "^2.0.1",
@@ -39,7 +40,9 @@
     "@types/node": "^15.6.1",
     "editorconfig-checker": "^4.0.2",
     "eslint": "^7.27.0",
+    "husky": "^7.0.0",
     "jest": "^27.0.3",
+    "lint-staged": "^11.0.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
