--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -1,13 +1,14 @@
 {
-  "apps": [{
+  "apps": [
+    {
+      "name": "service",
+      "namespace": "default",
 
-    "name": "service",
-    "namespace": "default",
+      "cwd": "./",
+      "script": "build/index.js",
 
-    "cwd": "./",
-    "script": "build/index.js",
-
-    "watch": true,
-    "ignore_watch": [".git", "node_modules", "src", "**/.DS_Store"]
-  }]
+      "watch": true,
+      "ignore_watch": [".git", "node_modules", "src", "**/.DS_Store"]
+    }
+  ]
 }
