--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "start:watch": "nodemon",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "release:patch": "npm version patch && git push --follow-tags",
-    "release:minor": "npm version minor && git push --follow-tags",
-    "release:major": "npm version major && git push --follow-tags",
+    "release:patch": "npm version patch --no-commit-hooks && git push --follow-tags",
+    "release:minor": "npm version minor --no-commit-hooks && git push --follow-tags",
+    "release:major": "npm version major --no-commit-hooks && git push --follow-tags",
     "prepare": "husky install"
   },
   "devDependencies": {
