--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
 name: ci
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+    tags:
+      - 'v*' # Tags matching v*, e.g. v1.0, v0.3.1
+  pull_request:
 
 jobs:
   build:
@@ -12,7 +18,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
-      - name: Load dependancy cache
+      - name: Load dependency cache
         uses: actions/cache@v2
         with:
           path: ~/.npm
@@ -43,7 +49,7 @@ jobs:
         id: npm-cache-dir
         run: |
           echo "::set-output name=dir::$(npm config get cache)"
-      - name: Load dependancy cache
+      - name: Load dependency cache
         uses: actions/cache@v2
         id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
         with:
@@ -66,7 +72,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
-      - name: Load dependancy cache
+      - name: Load dependency cache
         uses: actions/cache@v2
         with:
           path: ~/.npm
@@ -77,3 +83,32 @@ jobs:
         run: npm ci
       - name: Lint
         run: npm run lint
+
+  release:
+    runs-on: ubuntu-latest
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+    needs: ['build', 'test', 'lint']
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # Git history won't be fetched without this option
+      - name: Generate release notes # To change the release notes format, edit RELEASE.md.hbs
+        id: notes
+        run: |
+          npx auto-changelog@2.x.x --template RELEASE.md.hbs --output RELEASE.md --commit-limit false
+          NOTES=$(cat RELEASE.md)
+          NOTES="${NOTES//'%'/'%25'}"
+          NOTES="${NOTES//$'\n'/'%0A'}"
+          echo "::set-output name=notes::$NOTES"
+      - name: Create release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          body: ${{ steps.notes.outputs.notes }}
+          draft: false
+          prerelease: false
