--- a/package.json
+++ b/package.json
@@ -23,21 +23,22 @@
     "build": "npm run clean && tsc",
     "build:start": "npm run build && npm run start",
     "clean": "rimraf build",
-    "lint": "eslint . && ec .",
     "format": "sort-package-json && prettier --write '**/*.{ts,js,json,yml,md}' && eslint --fix .",
+    "lint": "eslint . && ec .",
+    "prepare": "husky install",
+    "release:major": "npm version major --no-commit-hooks && git push --follow-tags",
+    "release:minor": "npm version minor --no-commit-hooks && git push --follow-tags",
+    "release:patch": "npm version patch --no-commit-hooks && git push --follow-tags",
     "start": "node build/index.js",
     "start:watch": "nodemon",
     "test": "jest",
-    "test:watch": "jest --watchAll",
-    "release:patch": "npm version patch --no-commit-hooks && git push --follow-tags",
-    "release:minor": "npm version minor --no-commit-hooks && git push --follow-tags",
-    "release:major": "npm version major --no-commit-hooks && git push --follow-tags",
-    "prepare": "husky install"
+    "test:watch": "jest --watchAll"
   },
   "devDependencies": {
-    "@jessety/eslint-config": "^2.0.1",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^15.6.1",
+    "@jessety/eslint-config": "^2.2.2",
+    "@jessety/prettier-config": "^1.1.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.4",
     "editorconfig-checker": "^4.0.2",
     "eslint": "^7.27.0",
     "husky": "^7.0.0",
@@ -46,7 +47,7 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
-    "sort-package-json": "^1.49.0",
+    "sort-package-json": "^1.52.0",
     "ts-jest": "^27.0.1",
     "typescript": "^4.1.5"
   }
