--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -2,5 +2,6 @@
   "*.{ts,js,mjs,cjs}": ["prettier --write '**/*.{ts,js,mjs,cjs}'", "eslint --fix ."],
   "*.json": "prettier --write '**/*.json'",
   "*.yml": "prettier --write '**/*.yml'",
-  "*.md": "prettier --write '**/*.md'"
+  "*.md": "prettier --write '**/*.md'",
+  "package.json": "sort-package-json"
 }
