--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,7 +1,5 @@
 {
-  "*.{ts,js,mjs,cjs}": ["prettier --write '**/*.{ts,js,mjs,cjs}'", "eslint --fix ."],
-  "*.json": "prettier --write '**/*.json'",
-  "*.yml": "prettier --write '**/*.yml'",
-  "*.md": "prettier --write '**/*.md'",
-  "package.json": "sort-package-json"
+  "*.{ts,js,mjs,cjs}": ["prettier --write", "eslint --cache --fix"],
+  "*.{json,yml,md}": "prettier --write",
+  "package.json": ["sort-package-json", "prettier --write"]
 }
