--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "build": "npm run clean && tsc",
     "build:start": "npm run build && npm run start",
     "clean": "rimraf build",
-    "format": "sort-package-json && prettier --write '**/*.{ts,js,json,yml,md}' && eslint --fix .",
-    "lint": "eslint . && ec .",
+    "docker:build": "docker build -t jessety/boilerplate-typescript-service .",
+    "docker:start": "docker run -p 8080:8080 --add-host=host.docker.internal:host-gateway -d jessety/boilerplate-typescript-service",
+    "format": "sort-package-json && prettier --write '**/*.{ts,js,mjs,cjs,json,yml,md}' && eslint --fix --cache .",
+    "lint": "eslint --cache . && ec .",
     "prepare": "husky install",
     "release:major": "npm version major --no-commit-hooks && git push --follow-tags",
     "release:minor": "npm version minor --no-commit-hooks && git push --follow-tags",
@@ -35,20 +37,20 @@
     "test:watch": "jest --watchAll"
   },
   "devDependencies": {
-    "@jessety/eslint-config": "^2.2.5",
-    "@jessety/prettier-config": "^1.1.0",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.6",
-    "editorconfig-checker": "^4.0.2",
-    "eslint": "^8.1.0",
-    "husky": "^7.0.0",
-    "jest": "^27.0.3",
-    "lint-staged": "^11.2.6",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.3.0",
-    "rimraf": "^3.0.2",
-    "sort-package-json": "^1.52.0",
-    "ts-jest": "^27.0.1",
+    "@jessety/eslint-config": "^2.4.0",
+    "@jessety/prettier-config": "^1.2.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^16.18.16",
+    "editorconfig-checker": "^5.0.1",
+    "eslint": "^8.36.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.0",
+    "nodemon": "^2.0.21",
+    "prettier": "^2.8.4",
+    "rimraf": "^4.4.0",
+    "sort-package-json": "^2.4.1",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.1.5"
   }
 }
