--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
     /* Basic Options */
-    // "incremental": true,                   /* Enable incremental compilation */
+    "incremental": true /* Enable incremental compilation */,
+    "tsBuildInfoFile": "build/.tsbuildinfo",
     "target": "ES2020",
     /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
     "module": "es2020",
